1.3.6
	+ Upgraded windows installer, now we use 2.1 (previously was 2.0.9)
	+ Add "configuration" field to Client model to select manual  or
	  bundle configuration mode
	+ Bugfix: bundle configuration mode works again
	+ Bugfix: windows bundle works again
        + DownloadClient bundle form is only showed when server 	configuration is complete	
1.3.4
	+ tableInfo returns an array of hash refs
1.1.20
	+ Bugfix: Allow VPN clients with spaces in its common name
	+ Enable/disable rip password depending on eBox-to-eBox conf
	+ Bugfix: fixed bug in interface number when number >= 10
1.1
	+ Show status for non-internal VPN daemons in dashboard
	+ Using EBox::Types::Text::WriteOnce instead of EBox::Types::OpenVPN::WriteOnceText
	+ Use the new rows() and ids() API
0.12.100
	+ Daemon names are restricted to alphanumerics and '-'. '_', '.'
	  characters
	+ Bugfix: servers and clients cannto get any longer the same
	interface number
	+ Added log rotation using logrotate
0.12.99
	+ New release
0.12
	+ Adapt ebox-openvpn to MVC framework
	+ Bugfix: Enforcing RIPv2 to always authenticate when using eBox
	tunnels
0.11.103
	+ Bugfix. Quote certificate file names with double quote to
	  fix bug in win32
0.11.102
	+ Bugfix. Quote certifacte file names to support spaces
0.11.101
	+ Fix typo in CreateClient
	+ Do not remove quagga and openVPN rc links
	+ Bugfix. Retrieve rip password in server configuration
	+ Bugfix. Allow user to remove rip password when disabling ebox-to-ebox
	  tunnel
	+ Add backwards compatibility with old openVPN tunnels
	+ Make removed daemons deletion more robust
	+ Bugfix. Get activeServers instead of activeDaemons to add
	  INPUT rules
	+ Removed duplicate pmasquerade firewall rules, input rules to
	server more restrictive with input interface
0.11.100
	+ Bugfix. rip password is not required for normal clients
	+ Add feature to allow masquerading in VPNs. Now you can use the
	  openVPN module with just one interface.
0.11.99